     [uidswap.c uuencode.c xmalloc.c openbsd-compat/bsd-arc4random.c]
     [openbsd-compat/bsd-closefrom.c openbsd-compat/bsd-cygwin_util.c]
     [openbsd-compat/bsd-getpeereid.c openbsd-compat/bsd-misc.c]
     [openbsd-compat/bsd-nextstep.c openbsd-compat/bsd-snprintf.c]
     [openbsd-compat/bsd-waitpid.c openbsd-compat/fake-rfc2553.c]
     RCSID() can die

20060318
 - (djm) [auth-pam.c] Fix memleak in error path, from Coverity via
   elad AT NetBSD.org
 - (dtucker) [openbsd-compat/bsd-snprintf.c] Bug #1173: make fmtint() take
   a LLONG rather than a long.  Fixes scp'ing of large files on platforms
   with missing/broken snprintfs.  Patch from e.borovac at bom.gov.au.

20060316
 - (dtucker) [entropy.c] Add headers for WIFEXITED and friends.
 - (dtucker) [configure.ac md-sha256.c] NetBSD has sha2.h in
   /usr/include/crypto.  Hint from djm@.
 - (tim) [kex.c myproposal.h md-sha256.c openbsd-compat/sha2.c,h]
   Disable sha256 when openssl < 0.9.7. Patch from djm@.
 - (djm) [kex.c] Slightly more clean deactivation of dhgex-sha256 on old
   OpenSSL; ok tim

20060315
 - (djm) OpenBSD CVS Sync:
   - msf@cvs.openbsd.org 2006/02/06 15:54:07
     [ssh.1]
     - typo fix
     ok jmc@
   - jmc@cvs.openbsd.org 2006/02/06 21:44:47
     [ssh.1]
     make this a little less ambiguous...
   - stevesk@cvs.openbsd.org 2006/02/07 01:08:04
     [auth-rhosts.c includes.h]
     move #include <netgroup.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:18:09
     [includes.h ssh-agent.c ssh-keyscan.c sshconnect2.c]
     move #include <sys/queue.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:42:00
     [channels.c clientloop.c clientloop.h includes.h packet.h]
     [serverloop.c sshpty.c sshpty.h sshtty.c ttymodes.c]
     move #include <termios.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:52:50
     [sshtty.c]
     "log.h" not needed
   - stevesk@cvs.openbsd.org 2006/02/07 03:47:05
     [hostfile.c]