@@ -1,4 +1,4 @@
-/*	$OpenBSD: myproposal.h,v 1.19 2006/03/07 09:07:40 djm Exp $	*/
+/*	$OpenBSD: myproposal.h,v 1.20 2006/03/19 18:53:12 deraadt Exp $	*/
 
 /*
  * Copyright (c) 2000 Markus Friedl.  All rights reserved.
@@ -30,14 +30,14 @@
 #if OPENSSL_VERSION_NUMBER < 0x00907000L
 # define KEX_DEFAULT_KEX		\
 	"diffie-hellman-group-exchange-sha1," \
- 	"diffie-hellman-group14-sha1," \
- 	"diffie-hellman-group1-sha1"
+	"diffie-hellman-group14-sha1," \
+	"diffie-hellman-group1-sha1"
 #else
 # define KEX_DEFAULT_KEX		\
 	"diffie-hellman-group-exchange-sha256," \
 	"diffie-hellman-group-exchange-sha1," \
- 	"diffie-hellman-group14-sha1," \
- 	"diffie-hellman-group1-sha1"
+	"diffie-hellman-group14-sha1," \
+	"diffie-hellman-group1-sha1"
 #endif
 
 #define	KEX_DEFAULT_PK_ALG	"ssh-rsa,ssh-dss"
